# telegram-webapp-auth

./: .coverage-tmp.html  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  formatters-cfg.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.agents/skills/project-pull-request/: SKILL.md
.agents/skills/project-release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/webchanges/: action.yml  hooks.py
.github/actions/webchanges-action/: action.yml  hooks.py
.github/workflows/: actionlint.yml  check-update.yml  docs.yml  python-check.yml  release.yml
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_aa05e3dee3db78c4___init___py.html  z_aa05e3dee3db78c4_auth_py.html  z_aa05e3dee3db78c4_data_py.html  z_aa05e3dee3db78c4_errors_py.html
docs/: auth.md  docs.md  index.md  license.md
docs/examples/: examples.md  fastapi.md
docs/guide/: error-handling.md  install.md  quick-start.md  third-party.md
docs/guide/examples/: django.md  fastapi.md
docs/references/: auth.md  data.md  errors.md
docs/spec/: auth.md  spec.md
guide/error-handling/: index.html
guide/examples/django/: index.html
guide/examples/fastapi/: index.html
guide/install/: index.html
guide/quick-start/: index.html
license/: index.html
references/auth/: index.html
references/data/: index.html
references/errors/: index.html
search/: search_index.json
telegram_webapp_auth/: __init__.py  auth.py  data.py  errors.py
tests/: conftest.py  test_validate.py  test_validate_third_party.py  test_verify.py
